Add animation on win event and fix AI hard level function

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,23 @@ body {
   }
 }
 
+.winner-animate {
+  animation: blink 1s;
+}
+
+@keyframes blink {
+  0%,
+  40%,
+  80% {
+    opacity: 0;
+  }
+  20%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes show {
   0% {
     transform: scale(0.5);
